[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "demo-lightsheet-data-proc"
version = "0.0.1"
description = "Demonstrating lightsheet microscopy data processing"
readme = "README.md"
authors = [
  { name = "Dave Bunten" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "ipykernel>=6.29.5",
  "nest-asyncio2>=1.7.2",
  "ome-arrow[viz]>=0.0.6",
  "pandas>=2.2.3",
  "tifffile>=2026.2.16",
]

[dependency-groups]
dev = [
  "poethepoet>=0.34",
  "pytest>=8.3.5",
]
notebooks = [
  "black>=25.1",
  "isort>=6.0.1",
  "jupyterlab>=4.4.2",
  "jupyterlab-code-formatter>=3.0.2",
  "jupytext>=1.17.1",
]

[tool.setuptools_scm]
root = "."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
version_file = "src/demo-lightsheet-data-proc/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-annotations
  "ANN",
  # flake8-comprehensions
  "C4",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # pylint
  "PL",
  # ruff
  "RUF",
  # flake8-simplify
  "SIM",
  "W",
]
# Ignore `F401` (unused imports) for `__init__.py` file
lint.per-file-ignores."__init__.py" = [ "F401" ]

[tool.pytest.ini_options]
pythonpath = [ "." ]

[tool.poe.tasks]
# tasks for development environments
test.shell = """
pytest
"""
jupyter.shell = """
jupyter lab
"""

[tool.jupytext]
formats = "ipynb,py:light"

[tool.vulture]
min_confidence = 90
paths = [ "src/demo-lightsheet-data-proc", "tests" ]
